# birdler

./: .gitignore  AGENTS.md  README.md  birdler.py  c.sh  chunking.py  codex_handoff.md  codex_realtime_report.md  codex_realtime_research.md  feature-plan.md  gen_parallel.py  postprocess.py  progress.py  pyproject.toml  retry.py  run_all_voices.sh  run_all_voices_polish.sh  run_ripley_style.sh  run_ripley_style_slow.sh  seeding.py  select.py  settings_io.py  todo.md  todos-chatterboxtts-extended.md  turn-no-output.md  validate.py
audio-samples/: .gitkeep
docs/: technical-briefing-ai-audio-bridge.md
generated-audio/: .gitkeep
tests/: test_args.py  test_atempo_cmdline.py  test_birdler.py  test_chunking_long_token.py  test_chunking_minlen.py  test_chunking_split_long_sentence.py  test_compat_legacy_prompt.py  test_import_and_cli.py  test_integration_smoke.py  test_naming.py  test_normalize_cmdline.py  test_output_dir_prompt.py  test_parallel_cli_integration.py  test_parallel_gen.py  test_parallel_retry_cli.py  test_post_denoise_stub.py  test_progress_messages.py  test_retry_loop.py  test_seeding.py  test_selection_policy.py  test_settings_io.py  test_tailer_helpers.py  test_text_splitting.py  test_voice_workflow.py  test_youtube_bootstrap.py  test_youtube_missing_tool.py
text-scripts/: a-team.txt  style-charles-bukowski.txt
tools/: __init__.py  audio_smoke.py  birdler_server.py  codex_append.py  codex_session_tail.py  codex_tail.py  stdin_to_ndjson.py  web_research_codex.py
